--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leaderboard-mv",
   "version": "1.0.0",
-  "description": "A simple yet powerful webpack boilerplate",
+  "description": "A JavaScript project for the Leaderboard list app.",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
